# microlearning

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  initial_issues.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/ISSUE_TEMPLATE/: jules-task.md
.github/workflows/: jules-integration.yml
alembic/: env.py
alembic/versions/: c6bf776c4d3f_create_all_tables.py
app/: main.py
app/core/: config.py  database.py
app/models/: analytics.py  billing.py  content.py  creator.py  guid.py  json_array.py  quiz.py  student.py
app/services/: ai_service_manager.py  content_cache.py  cost_tracker.py
docs/: AI_CONTENT_PIPELINE.md  DEVELOPMENT_PRINCIPLES.md  HUMAN_AGENT_COLLABORATION.md  JULES_AUTONOMOUS_PLAN.md  PROJECT_ROADMAP.md  TECHNICAL_ARCHITECTURE.md  UI_UX_SPECIFICATIONS.md
docs/decisions/: ADR-0001-ai-service-selection.md  ADR-0002-mobile-first-architecture.md  ADR-0003-web-only-architecture.md
mobile/src/components/quiz/: BinaryChoice.tsx
mobile/src/components/ui/: Button.tsx  Card.tsx  DesignSystem.ts  Typography.tsx
tests/: conftest.py  test_models.py
web-app/: jest.config.js  package-lock.json  package.json  tailwind.config.js
web-app/src/components/ui/: Alert.tsx  Avatar.tsx  Badge.tsx  Breadcrumbs.tsx  Button.tsx  Card.tsx  Form.tsx  Input.tsx  Label.tsx  Layout.tsx  Modal.tsx  Progress.tsx  Spinner.tsx  Tabs.tsx  VideoPlayer.tsx
web-app/src/components/ui/__tests__/: Alert.test.tsx  Avatar.test.tsx  Badge.test.tsx  Breadcrumbs.test.tsx  Button.test.tsx  Card.test.tsx  Form.test.tsx  Input.test.tsx  Modal.test.tsx  Progress.test.tsx  Spinner.test.tsx  Tabs.test.tsx
